# Chatbot

./: .gitignore  README.md  app.py  chatbot.py  ingest.py  mic_test.py  pyproject.toml  requirements.txt  voice_assistant.py
chat_env/: pyvenv.cfg
chat_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
templates/: README.md  index.html
vectorstore/: index.faiss  index.pkl
