[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.2",
    "google-generativeai>=0.8.6",
    "jinja2>=3.1.6",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyaudio>=0.2.14",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.6.0",
    "speechrecognition>=3.17.0",
    "uvicorn>=0.51.0",
]
